--- a/frontend/src/components/IncomeAndExpense.css
+++ b/frontend/src/components/IncomeAndExpense.css
@@ -198,6 +198,10 @@ h2 {
     color: #2ecc71;
 }
 
+.income__list{
+    margin: 0 auto;
+}
+
 .expense__title,
 .expense .item__value,
 .expense .item__delete-btn {
